// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DashboardPage > TODO削除 > 削除ボタンクリックでDELETE APIが呼ばれる > api-requests-delete 1`] = `
[
  {
    "method": "DELETE",
    "url": "/todo/1/",
  },
]
`;

exports[`DashboardPage > TODO更新 > チェックボックスクリックで完了状態が更新される > api-requests-toggle 1`] = `
[
  {
    "body": {
      "detail": "Detail 1",
      "dueDate": null,
      "name": "Test Todo 1",
      "progressStatus": "completed",
      "recurrenceType": "none",
    },
    "method": "PUT",
    "url": "/todo/1/",
  },
]
`;

exports[`DashboardPage > TODO更新 > 値変更→保存ボタンでPUT APIが呼ばれる > api-requests-update 1`] = `
[
  {
    "body": {
      "detail": "Updated Detail",
      "dueDate": null,
      "name": "Updated Todo",
      "progressStatus": "not_started",
      "recurrenceType": "none",
    },
    "method": "PUT",
    "url": "/todo/1/",
  },
]
`;

exports[`DashboardPage > 初期表示 > ページレンダリング時にGET APIが呼ばれ、TODOリストが表示される > api-requests 1`] = `
[
  {
    "method": "GET",
    "url": "/auth/user",
  },
]
`;

exports[`DashboardPage > 検索・フィルタ > 検索条件の変更後にデバウンスしてGET APIが呼ばれる > api-requests-search 1`] = `
[
  {
    "method": "GET",
    "query": {
      "dueDate": "today",
      "keyword": "Test",
      "progressStatus": "completed",
    },
    "url": "/todo/",
  },
]
`;
